<?xml version="1.0" encoding="utf-8"?><!--
    This file is part of DarkModeLiveWallpaper (github.com/cvzi/darkmodewallpaper).
-->
<resources>
    <string name="app_name">DarkModeLiveWallpaper No thumbnail</string>

    <string name="use_as_day_home">Day home screen wallpaper</string>
    <string name="use_as_night_home">Night home screen wallpaper</string>
    <string name="use_as_day_lock">Day lock screen wallpaper</string>
    <string name="use_as_night_lock">Night lock screen wallpaper</string>

    <string name="wallpaper_label">DarkModeWallpaper No thumbnail</string>
    <string name="wallpaper_description">Automatically changes wallpaper to fit Light/Dark theme</string>
    <string name="wallpaper_is_loading">loading…</string>

    <string name="color_chooser_day">Choose day time overlay color</string>
    <string name="color_chooser_night">Choose night time overlay color</string>

    <string name="status_darkmode">Dark mode status:</string>
    <string name="status_darkmode_day">Day time/Light theme</string>
    <string name="status_darkmode_night">Night time/Dark theme</string>

    <string name="status_requested_image_size">Recommended image size:</string>
    <string name="status_screen_size">Screen size:</string>
    <!-- For example: 720x1080 -->
    <string name="resolution_width_x_height" translatable="false">%1$dx%2$d</string>

    <!-- For example: Select image (Day time/Home screen) -->
    <string name="wallpaper_file_chooser_title">Select image (%1$s/%2$s)</string>
    <string name="wallpaper_file_chooser_day_time">Day time</string>
    <string name="wallpaper_file_chooser_night_time">Night time</string>
    <string name="wallpaper_file_chooser_home_screen">Home screen</string>
    <string name="wallpaper_file_chooser_lock_screen">Lock screen</string>

    <string name="wallpaper_import_dialog_title">Import current wallpaper</string>
    <string name="wallpaper_import_dialog_message">Would you like to import your current wallpaper?
\n\n(may not work for live wallpapers)
\n\nAsks for storage permission in the next step.
\nYou can safely revoke the permission when the wallpaper was imported.</string>
    <!-- For example: Wallpaper imported /sdcard/Pictures/day.png -->
    <string name="wallpaper_import_success">Wallpaper imported\n%1$s</string>
    <string name="wallpaper_import_failed">Could not retrieve image</string>
    <string name="wallpaper_import_permission_missing">The storage permission is needed to import a wallpaper!</string>

    <string name="image_file_import_error">Could not import image</string>
    <string name="image_file_import_loading_title">Importing image file</string>
    <!-- For example: Image stored in /sdcard/Pictures/day.png -->
    <string name="image_file_import_success">Image stored in %1$s</string>
    <!-- For example: Optimizing /sdcard/Android/data/com.github.cvzi.darkmodewallpaper/Pictures/day.png (imported from /storage/Pictures/image.jpg) -->
    <string name="image_file_import_loading_message">Optimizing %2$s\n(imported from %1$s)</string>

    <string name="button_import_wallpaper">Import wallpaper</string>
    <string name="button_more_settings">Advanced settings</string>
    <string name="button_apply_wallpaper">Apply as wallpaper</string>
    <string name="apply_wallpaper_unavailable">Please set the wallpaper manually from the Android settings</string>
    <string name="button_lock_screen_settings">Lock screen</string>
    <string name="switch_only_use_color">Only color</string>
    <string name="switch_use_color_overlay">Color overlay</string>
    <string name="color">Color</string>
    <string name="button_select_image">Select image</string>
    <string name="heading_day_time_settings">Day time</string>
    <string name="heading_night_time_settings">Night time</string>
    <string name="dialog_advanced_title">Actions:</string>
    <string name="dialog_button_preview">Preview wallpaper</string>
    <string name="dialog_button_advanced">Contrast &amp; Brightness</string>
    <string name="dialog_button_select_image">Select another image</string>
    <string name="dialog_button_delete_image">Delete image</string>
    <string name="switch_separate_lock_screen_settings">Separate lock screen settings</string>
    <string name="switch_separate_lock_screen_settings_description">Enable to use separate lock screen settings</string>
    <string name="switch_animate_from_lock_screen">Animate transition to home screen wallpaper after unlock</string>
    <string name="switch_animate_from_lock_screen_description">Enable to use an animation from lock screen to home screen wallpaper after unlock</string>
    <string name="lock_symbol_description">Lock screen symbol</string>
    <string name="sun_symbol_description">Sun/Day</string>
    <string name="moon_symbol_description">Moon/Night</string>
    <string name="button_select_color_description">Select color</string>
    <string name="switch_reuse_day_image_for_night">Use day time image</string>
    <string name="switch_reuse_day_image_for_night_description">Use separate night time wallpaper or reuse day time wallpaper</string>
    <string name="text_lock_screen_explanation">If you enable the switch at the top, you can set different wallpapers and different colors for the lock screen.
\nUnfortunately, this does not work on all phones because some phone manufacturers set their own lock screen wallpaper and won\'t let you change it.
\n\nMake sure to press \"Home screen and lock screen\", when you set the live wallpaper.
\n\nThe lock screen image should match the screen size. If it is larger than the screen, it will be scaled and centered.\n</string>
    <string name="about">About</string>
    <string name="about_issues"><![CDATA[You found a problem or you have a suggestion?<br>Open an issue at <a href="https://github.com/cvzi/darkmodewallpaper/issues">github.com/cvzi/darkmodewallpaper/issues</a>]]></string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="night_mode_trigger">Night mode trigger:</string>
    <string name="night_mode_trigger_follow_system">Follow system</string>
    <string name="night_mode_trigger_time_range">Time range</string>
    <string name="zoom_effect">Zoom effect:</string>
    <string name="zoom_effect_description">On Android 11+ a \"zoom in\" animation happens when you pull down the notifications area or when you open the recent apps overview.</string>
    <string name="seek_bar_blur">Blur:</string>
    <string name="scrolling_mode">Scrolling:</string>
    <string name="scrolling_mode_value_automatic">Auto</string>
    <string name="scrolling_mode_value_on">On</string>
    <string name="scrolling_mode_value_off">Off</string>
    <string name="scrolling_mode_value_inverse">Reverse</string>
    <string name="setting_inform_new_wallpaper_colors_heading">Immediately inform Android about new wallpaper colors after unlock</string>
    <string name="setting_inform_new_wallpaper_colors_toggle_wait">Wait</string>
    <string name="setting_inform_new_wallpaper_colors_toggle_immediately">Immediately</string>
    <string name="setting_inform_new_wallpaper_colors_description"><![CDATA[When you unlock your phone and the lock-screen wallpaper changes into the home-screen wallpaper, the app needs to inform Android about the color of the wallpaper.
Android changes the design and font colors according to the new colors.
Depending on the wallpaper colors this can cause a flicker of the screen.
Normally the colors are sent immediately after unlocking the phone.
If you see flickering, set this option to \"Wait\" and instead the colors will be sent once you open an app.]]></string>
    <string name="blur_unavailable_in_animations">Can\'t blur animated images</string>
    <string name="setting_inform_wallpaper_colors_heading">Inform Android about lockscreen wallpaper colors</string>
    <string name="setting_inform_wallpaper_colors_description">If you still see flickering, you can try to disable informing Android about lockscreen colors.</string>
    <string name="setting_clear_memory_heading">Automatically remove wallpaper images from memory</string>
    <string name="setting_clear_memory_description">If your device is running low on memory, Android can ask apps to release memory. If this switch is enabled, the app will release the wallpaper images from memory.</string>
    <string name="setting_manual_colors_heading">Set the colors that Android and the launcher receive</string>
    <string name="setting_manual_colors_description">The colors may be used by the launcher to modify text color, drawer color, etc.\nNormally the colors are generated from the wallpaper image. Enable the switches to choose up to three different colors:</string>
    <string name="setting_button_insert_current_values">Insert current values</string>
    <string name="setting_button_apply">Apply</string>

</resources>