<?xml version="1.0" encoding="utf-8"?><!--
    DarkModeLiveWallpaper github.com/cvzi/darkmodewallpaper
    Copyright © 2021 cuzi@openmail.cc

    This file is part of DarkModeLiveWallpaper.

    DarkModeLiveWallpaper is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    DarkModeLiveWallpaper is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with DarkModeLiveWallpaper.  If not, see <https://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="7dp">

    <Button
        android:id="@+id/buttonPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/button_dialog_transparent"
        android:padding="5dp"
        android:text="@string/dialog_button_preview"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonAdvanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/button_dialog_transparent"
        android:padding="5dp"
        android:text="@string/dialog_button_advanced"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonNewImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/button_dialog_transparent"
        android:padding="5dp"
        android:text="@string/dialog_button_select_image"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonDeleteImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/button_dialog_transparent"
        android:padding="5dp"
        android:text="@string/dialog_button_delete_image"
        android:textAllCaps="false"
        android:textSize="24sp" />

</LinearLayout>
