<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MoreSettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                style="@style/CardViewPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:accessibilityHeading="true"
                    android:text="@string/button_more_settings"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:accessibilityHeading="true"
                        android:labelFor="@id/toggleButtonNotifyColorsImmediately"
                        android:text="@string/setting_inform_new_wallpaper_colors_heading"
                        android:textStyle="bold" />

                    <ToggleButton
                        android:id="@+id/toggleButtonNotifyColorsImmediately"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textOff="@string/setting_inform_new_wallpaper_colors_toggle_wait"
                        android:textOn="@string/setting_inform_new_wallpaper_colors_toggle_immediately" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/setting_inform_new_wallpaper_colors_description" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:accessibilityHeading="true"
                        android:labelFor="@id/toggleButtonNotifyColors"
                        android:text="@string/setting_inform_wallpaper_colors_heading"
                        android:textStyle="bold" />

                    <ToggleButton
                        android:id="@+id/toggleButtonNotifyColors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textOff="@string/scrolling_mode_value_off"
                        android:textOn="@string/scrolling_mode_value_on" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/setting_inform_wallpaper_colors_description" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                style="@style/CardViewPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:accessibilityHeading="true"
                        android:labelFor="@id/toggleButtonClearMemory"
                        android:text="@string/setting_clear_memory_heading"
                        android:textStyle="bold" />

                    <ToggleButton
                        android:id="@+id/toggleButtonClearMemory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textOff="@string/scrolling_mode_value_off"
                        android:textOn="@string/scrolling_mode_value_on" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/setting_clear_memory_description" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                style="@style/CardViewPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:accessibilityHeading="true"
                        android:text="@string/setting_manual_colors_heading"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/setting_manual_colors_description" />

                    <Button
                        android:id="@+id/buttonInsertCurrent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_button_insert_current_values" />

                    <include
                        android:id="@+id/home_day_colors"
                        layout="@layout/layout_wallpaper_colors"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <include
                        android:id="@+id/home_night_colors"
                        layout="@layout/layout_wallpaper_colors"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <include
                        android:id="@+id/lock_day_colors"
                        layout="@layout/layout_wallpaper_colors"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <include
                        android:id="@+id/lock_night_colors"
                        layout="@layout/layout_wallpaper_colors"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/buttonNotifyColorsChanged"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_button_apply" />

                    <TextView
                        android:id="@+id/textViewAndroid31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="DARK_TEXT\nSpecifies that dark text is preferred over the current wallpaper for best presentation. eg. A launcher may set its text color to black if this flag is specified.\n\nDARK_THEME\nSpecifies that dark theme is preferred over the current wallpaper for best presentation. eg. A launcher may set its drawer color to black if this flag is specified.\n" />

                    <TextView
                        android:id="@+id/textViewLinkAndroidReference"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="https://developer.android.com/reference/android/app/WallpaperColors" />

                    <Button
                        android:id="@+id/buttonResetColors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Reset colors" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewPrimary"
                android:layout_marginBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:accessibilityHeading="true"
                        android:labelFor="@id/toggleButtonClearMemory"
                        android:text="Switch to night wallpaper when the ambient light sensor detects a dark environment"
                        android:textStyle="bold" />

                    <ToggleButton
                        android:id="@+id/toggleButtonLuxThreshold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textOff="@string/scrolling_mode_value_off"
                        android:textOn="@string/scrolling_mode_value_on" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="Select the threshold value to switch from day to night wallpaper. Higher value means brighter environment." />


                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editTextLuxThreshold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:enabled="false"
                            android:inputType="text"
                            android:text="" />

                        <SeekBar
                            android:id="@+id/seekBarLuxThreshold"
                            style="@style/Widget.AppCompat.SeekBar.Discrete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="200"
                            android:progress="1" />
                </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="Current ambient light sensor value:" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editTextCurrentLux"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:enabled="false"
                            android:inputType="text"
                            android:text="" />

                        <ProgressBar
                            android:id="@+id/seekBarCurrentLux"
                            style="@android:style/Widget.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="200"
                            android:progress="1" />
                    </LinearLayout>



                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>